# pommesdispatch

./: .coveragerc  .gitignore  CITATION.cff  LICENSE  README.md  config.yml  environment.yml  functions_for_data_input_LP.py  functions_for_processing_of_outputs_LP.py  functions_to_include_further_constraints_LP.py  power_market_model_LP.py  pyproject.toml  requirements.txt  run_model_market_value_update.py  setup.py
.github/workflows/: coverage.yml  lint.yml  packaging.yml  packaging_pytests.yml
docs/: .gitignore  api.rst  changelog.rst  conf.py  index.rst  model.rst  reference.rst  requirements.txt  usage.rst
docs/api/: api.rst  api_data_input.rst  api_dispatch_model.rst  api_helpers.rst  api_model_control.rst  api_subroutines.rst
docs/model/: background.rst  categorization.rst  formulation.rst  model.rst
pommesdispatch/: __init__.py  __main__.py  cli.py
pommesdispatch/model/: dispatch_model.py
pommesdispatch/model_funcs/: data_input.py  helpers.py  model_control.py  results_processing.py  subroutines.py  test_model_control.py
src/: __init__.py
src/pommes_dispatch/: __init__.py  dispatch_model.py  subroutines_for_data_input_LP.py
tests/: test_cli.py  test_data_input.py  test_dispatch_model.py  test_helpers.py  test_model_control.py  test_results_processing.py  test_subroutines.py
tests/csv_files/: buses_2017.csv  costs_carbon_2017.csv  costs_emissions_long-term_nominal_2017.csv  costs_emissions_ts_2017.csv  costs_fuel_NZE_nominal_2017.csv  costs_fuel_middle_2017.csv  costs_fuel_ts_2017.csv  costs_market_values_2017.csv  costs_operation_nominal_2017.csv  costs_operation_renewables_2017.csv  costs_operation_storages_nominal_2017.csv  costs_ramping_2017.csv  demand_response_clusters_eligibility.csv  min_loads_dh.csv  (+47 more)
(+39 files in other folders)
