[tool.poetry]
name = "pommesdispatch"
version = "0.0.2"
description = ""
authors = ["Johannes Kochems <jokochems@web.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_pommes_dispatch = "pommesdispatch.cli:run_pommes_dispatch"